gc/arguments/TestSelectDefaultGC.java fails when compiler1 is disabled

XMLWordPrintable

    • b20

      Created on behalf of Sun Guoyun <sunguoyun@loongson.cn>:

      gc/arguments/TestSelectDefaultGC.java hit assert(verify_level(level)) failed: Invalid highest compilation level when using --with-jvm-features=-compiler1:

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/compilationPolicy.cpp:582
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/gysun/jdk-ls-x64/src/hotspot/share/compiler/compilationPolicy.cpp:582), pid=20304, tid=20305
      # assert(verify_level(level)) failed: Invalid highest compilation level: 1
      #
      # JRE version: (17.0) (fastdebug build )
      # Java VM: OpenJDK 64-Bit Server VM (fastdebug 17-internal+0-adhoc.gysun.jdk-ls-x64, mixed mode, emulated-client, compressed oops, compressed class ptrs, serial gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x7e3dc0] CompilationPolicy::highest_compile_level()+0xc0
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P %E" (or dumping to /home/gysun/jdk-ls-x64/JTwork/scratch/core.20304)
      #
      # An error report file with more information is saved as:
      # /home/gysun/jdk-ls-x64/JTwork/scratch/hs_err_pid20304.log

            Assignee:
            Qi Ao
            Reporter:
            Qi Ao
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: