8265105: gc/arguments/TestSelectDefaultGC.java fails when compiler1 is disabled